2010-11-18  Marko Kohtala  <marko.kohtala@gmail.com>

  * gpasm/evaluate.c (add_reloc, evaluate): Fix $ value in idata section.
  * libgputils/gpcofflink.c (_create_rom_section): Initialize the padding
  byte that is added to make initialization data rom section size even
  bytes.
  (gp_add_cinit_section): Fix .cinit rom addresses.

2010-11-14  Marko Kohtala  <marko.kohtala@gmail.com>
  * gpasm/cod.c (write_cod_range_block): Fix
  gpasm/testsuite/gpasm.project/asmfiles/tb.asm compilation assertion
  error.

2010-11-13  Marko Kohtala  <marko.kohtala@gmail.com>
  * Patch #2970413 by Marco Mattila merged for partial pic16e support.
  * gpasm/macro.c (make_macro_buffer): Fix uninitialized variable.
  * gputils/gpvo.c (print_sym_table): Fix symbol values.
  * libgputils/gpcofflink.c (gp_cofflink_update_table): Bug #3094297 fix
  to adjust symbol value by org rather than byte.

2010-11-12  Marko Kohtala  <marko.kohtala@gmail.com>
  * gpasm/directive.c (checkwrite, emit_byte): Fix maxrom and badrom
  checks. Fixes #3107775.
  * libgputils/gpprocessor.c (pics): Fix eeprom memories for 16f627a,
  16f628a, 16f84a and memory sizes for 17c42 and 17c42a.

2010-11-03  Marko Kohtala  <marko.kohtala@gmail.com>
  * gputils/gpvo.c (print_data): Fix to not hang on STYP_ACTREC.
  * gpasm/testsuite/gpasm.project/asmfiles/pagesel?.asm,
  gplink/testsuite/gplink.project/asmfiles/reloc1*.asm: Add test cases for
  pagesel $ in different pages. Compiled reference .hex files with mpasm
  5.34.

2010-10-18  Marko Kohtala  <marko.kohtala@gmail.com>
  * gpasm/directive.c (do_page): Do not start new page if in NOLIST.

2010-10-17  Marko Kohtala  <marko.kohtala@gmail.com>
  * gpasm/lst.c (lst_line): Allow printf formatting to avoid lots of error
  prone formatting to a buffer. Modify also uses of the function.
  (lst_printf,lst_eol): New functions to avoid need of building complicated
  string in buffer.
  (lst_format_line): Code rearranged to emit coff line number in beginning